--- a/landingpage.html
+++ b/landingpage.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1 , user-scalable=0" class="next-head"/>
     <title>PAGE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap-grid.min.css">
@@ -38,47 +39,46 @@
         <div class="form-info mb-5">
             <h2 class="title-2">Thông tin cá nhân</h2>
             <div class="row">
-                <div class="col-md-6 pr-4">
-                    <div class="form-group  d-md-flex align-items-center">
-                        <label for="name" class="col-md-2 p-0 ">Họ và tên</label>
-                        <input type="text" id="name" class="form-control" placeholder="Họ và tên" aria-label="Username"
+                <div class="col-md-6 pr-md-4">
+                    <div class="form-group  d-md-flex align-items-center justify-content-between">
+                        <label for="name" class=" ">Họ và tên</label>
+                        <input type="text" id="name" class="form-control w-80" placeholder="Họ và tên" aria-label="Username"
                                aria-describedby="basic-addon1">
                     </div>
-                    <div class="form-group d-md-flex align-items-center">
-                        <label for="id" class="col-md-2 p-0">Số CMND</label>
-                        <input type="text" id="id" class="form-control" placeholder="Số CMTND" aria-label="Username"
+                    <div class="form-group d-md-flex align-items-center justify-content-between">
+                        <label for="id" class="">Số CMND</label>
+                        <input type="text" id="id" class="form-control w-80" placeholder="Số CMTND" aria-label="Username"
                                aria-describedby="basic-addon1">
                     </div>
-                    <div class="form-group d-md-flex align-items-center">
-                        <label for="email" class="col-md-2 p-0">Email</label>
-                        <input type="text" id="email" class="form-control" placeholder="Địa chỉ email"
+                    <div class="form-group d-md-flex align-items-center justify-content-between">
+                        <label for="email" class="">Email</label>
+                        <input type="text" id="email" class="form-control w-80" placeholder="Địa chỉ email"
                                aria-label="Username" aria-describedby="basic-addon1">
                     </div>
                 </div>
                 <div class="col-md-6 pl-md-4">
-                    <div class="form-group row d-md-flex justify-content-between">
-                        <div class="d-md-flex align-items-center col-7 ">
-                            <label for="birthday" class="col-md-5 max-width">Ngày sinh</label>
-                            <input type="text" id="birthday" class="form-control" placeholder="Ngày sinh"
+                    <div class="form-group d-md-flex align-items-center justify-content-between">
+                        <label for="birthday" class="">Ngày sinh</label>
+                        <div class="d-flex align-items-center  w-80 ">
+                            <input type="text" id="birthday" class="form-control w-50 mr-4" placeholder="Ngày sinh"
                                    aria-label="Username" aria-describedby="basic-addon1">
+                            <div class="w-50 d-flex justify-content-between select-gt">
+                                <label for="gt" class="w-80">Giới tính</label>
+                                <select id="gt" class="w-100">
+                                    <option value="0" selected>Nam</option>
+                                    <option value="1">Nữ</option>
+                                </select>
+                            </div>
                         </div>
-                        <div class="d-md-flex align-items-center col-5 ">
-                            <label for="gt" class="col-md-6 p-0">Giới tính</label>
-                            <select id="gt" class="w-100">
-                                <option value="0" selected>Nam</option>
-                                <option value="1">Nữ</option>
-                            </select>
-                        </div>
-
                     </div>
-                    <div class="form-group d-md-flex align-items-center">
-                        <label for="phone" class="" style="padding: 0 15px; width: 132px">Điện thoại</label>
-                        <input type="text" id="phone" class="form-control" placeholder="Số điện thoại"
-                               aria-label="Username" aria-describedby="basic-addon1">
+                    <div class="form-group d-md-flex align-items-center justify-content-between">
+                        <label for="phone" class="">Điện thoại</label>
+                        <input type="text" id="phone" class="form-control w-80" placeholder="Số điện thoại" aria-label="Username"
+                               aria-describedby="basic-addon1">
                     </div>
-                    <div class="form-group d-md-flex align-items-center">
-                        <label for="add" style="padding: 0 15px; width: 132px">Địa chỉ</label>
-                        <input type="text" id="add" class="form-control" placeholder="Địa chỉ" aria-label="Username"
+                    <div class="form-group d-md-flex align-items-center justify-content-between">
+                        <label for="add" class="">Địa chỉ</label>
+                        <input type="text" id="add" class="form-control w-80" placeholder="Địa chỉ" aria-label="Username"
                                aria-describedby="basic-addon1">
                     </div>
                 </div>
@@ -86,7 +86,7 @@
         </div>
         <div class="option">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 pr-md-4">
                     <h2 class="title-2">Phân loại nhu cầu</h2>
                     <div style="margin-bottom: 140px">
                         <h6 class="title-3">Số tiền muốn vay</h6>
@@ -114,8 +114,8 @@
                     </div>
                 </div>
                 <div class="col-md-6 pl-md-4 space-mb">
-                    <h6 class="title-2 space-15">Bạn có</h6>
-                    <div class="space-15">
+                    <h6 class="title-2 ">Bạn có</h6>
+                    <div class="">
                         <div class="check">
                             <div class="d-flex align-items-center justify-content-between">
                                 <label>Bạn có vay tại ngân hàng</label>
@@ -140,8 +140,8 @@
             </div>
         </div>
         <div class="footer d-flex">
-            <button type="submit" class="btn btn-outline-dark px-3 mr-4">Hủy bỏ</button>
-            <button type="submit" class="btn btn-info px-3" data-toggle="modal" data-target="#success">Gửi ngay</button>
+            <button type="submit" class="btn btn-outline-dark mr-4">Hủy bỏ</button>
+            <button type="submit" class="btn btn-info" data-toggle="modal" data-target="#success">Gửi ngay</button>
         </div>
     </div>
 </div>
