fix font size, space

--- a/landingpage.html
+++ b/landingpage.html
@@ -34,7 +34,7 @@
     </div>
 </div>
 <div class="container">
-    <h1 class="title-1 my-3 text-center">Đăng ký nhận ngay ưu đãi</h1>
+    <h1 class="title-1 my-4 text-center">Đăng ký nhận ngay ưu đãi</h1>
     <div class="content">
         <div class="form-info mb-5">
             <h2 class="title-2">Thông tin cá nhân</h2>
@@ -63,7 +63,7 @@
                             <input type="text" id="birthday" class="form-control w-50 mr-4" placeholder="Ngày sinh"
                                    aria-label="Username" aria-describedby="basic-addon1">
                             <div class="w-50 d-flex justify-content-between select-gt">
-                                <label for="gt" class="w-80">Giới tính</label>
+                                <label for="gt" class="w-80 d-flex align-items-center">Giới tính</label>
                                 <select id="gt" class="w-100">
                                     <option value="0" selected>Nam</option>
                                     <option value="1">Nữ</option>
